# autobot

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  formatted_results.yml  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
autobot/: __init__.py  api.py  cli.py  config.ini  config.py  config_loader.py  github.py  utils.py
docs/: conf.py  index.rst  usage.rst
results/: invenio-deposit&search.md  invenio-deposit.md  pytest-invenio.md  slint.md
tests/: conftest.py  mocks.py  test_autobot.py
