# SPDX-FileCopyrightText: 2015-2019 CERN.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "autobot"
description = "Autobot generates notifications and updates concerning the state of inveniosoftware repositories"
readme = "README.rst"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "autobot",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
]
dependencies = [
  "click>=7.0",
  "github3.py>=0.9.3",
  "lazy-load>=0.8.2",
  "python-dotenv>=0.10.3",
  "pyyaml>=3.13",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/inveniosoftware/autobot"

[project.scripts]
autobot = "autobot.cli:main"

[project.optional-dependencies]
docs = [
  "sphinx>=4.5.0",
]
tests = [
  "check-manifest>=0.35",
  "coverage>=4.0",
  "isort>=4.2.15",
  "mock>=1.3.0",
  "pydocstyle>=1.0.0",
  "pytest-cov>=1.8.0",
  "pytest-random-order>=0.5.4",
  "pytest>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "autobot/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/autobot",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
testpaths = "tests autobot"
live_server_scope = "module"
